syntax = "proto3";
package pb;

option go_package = "pkg/utils/pb";


import "block.proto";


service S3Proxy {
    rpc GetBlock (GetBlockRequest) returns (stream BlockChunk) {}
    rpc PutBlock (stream BlockChunk) returns (PutBlockReply) {}
    rpc GetFile(GetFileRequest) returns (GetFileReply) {}
    rpc PutFile(PutFileRequest) returns (PutFileReply) {}
    rpc ListHeaderStartAt(ListHeaderStartAtRequest) returns (ListHeaderStartAtReply) {}
    rpc RemoveFiles(RemoveFilesRequest) returns (RemoveFilesReply) {}
  }
  
  message GetBlockRequest {
    BlockInfo info = 1;
  }
  
  message BlockChunk {
    BlockInfo info = 1;
    bytes chunk = 2;
  }

  message PutBlockReply {
  }

  message GetFileRequest {
    string path = 1;
  }

  message GetFileReply {
    bytes data = 1;
  }

  message PutFileRequest {
    string path = 1;
    bytes data = 2;
  }

  message PutFileReply {
  }

  message ListHeaderStartAtRequest {
    string chain_id = 1;
    string env = 2;
    int64 block_num = 3;
    int64 count_num = 4;
    int64 after_msg_offset = 5;
  }

  message ListHeaderStartAtReply {
    repeated BlockInfo infos = 1;
  }

  message RemoveFilesRequest {
    repeated BlockInfo infos = 1;
  }

  message RemoveFilesReply {
  }
